--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>He took it well</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Write this one down</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>I’ll get the next one dw 😆</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Hope I did it right!</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Smooooooooooth</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Skeletor loved his prom</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>I don’t know what was that guys</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Clive is stuck in the cat flap</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>I saw the light for a second</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Back Here Again was a real fun one to make ! Keep streaming the EP #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>How to Freeze Pizza Dough</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Why Nothing Feels Exciting Anymore</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - My EP is out and I’m very proud of it. I hope you love it as much as I do #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Root of the Mind is in the Heart</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -328,9 +328,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=vKTeZCv_xY8" target="_blank">
-                    <img src="https://i.ytimg.com/vi/vKTeZCv_xY8/mqdefault.jpg" alt="Japanese Restaurant That Lets YOU Decide the Price">
+                    <img src="https://i.ytimg.com/vi/vKTeZCv_xY8/mqdefault.jpg" alt="What a “Pay What You Want” Japanese Restaurant is like">
                     <div class="video-info">
-                        <h3>Japanese Restaurant That Lets YOU Decide the Price</h3>
+                        <h3>What a “Pay What You Want” Japanese Restaurant is like</h3>
                         <div class="channel">Paolo fromTOKYO</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why Nothing Feels Exciting Anymore</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Root of the Mind is in the Heart</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>How to Freeze Pizza Dough</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>He took it well</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Write this one down</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>I’ll get the next one dw 😆</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Hope I did it right!</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Smooooooooooth</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Skeletor loved his prom</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>I don’t know what was that guys</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>Clive is stuck in the cat flap</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10320,7 +10320,7 @@
                         <div class="video-info">
                             <h3>I saw the light for a second</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10331,7 +10331,7 @@
                         <div class="video-info">
                             <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10342,7 +10342,7 @@
                         <div class="video-info">
                             <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10353,7 +10353,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Back Here Again was a real fun one to make ! Keep streaming the EP #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10364,16 +10364,16 @@
                         <div class="video-info">
                             <h3>Arthur Hill - My EP is out and I’m very proud of it. I hope you love it as much as I do #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=vKTeZCv_xY8" target="_blank">
-                        <img src="https://i.ytimg.com/vi/vKTeZCv_xY8/mqdefault.jpg" alt="Japanese Restaurant That Lets YOU Decide the Price">
+                        <img src="https://i.ytimg.com/vi/vKTeZCv_xY8/mqdefault.jpg" alt="What a “Pay What You Want” Japanese Restaurant is like">
                         <div class="video-info">
-                            <h3>Japanese Restaurant That Lets YOU Decide the Price</h3>
+                            <h3>What a “Pay What You Want” Japanese Restaurant is like</h3>
                             <div class="channel">Paolo fromTOKYO</div>
                             <div class="date">Yesterday</div>
                         </div>
